# keywork

./: .gitignore  CLAUDE.md  HUMANS.md  Makefile  README.md  pyproject.toml
agents/: complete_goal.sh  create_prd.sh  feedback.sh  loop.sh  new_goal.sh  orchestrate.sh  repo_init.sh  report.py  retro.sh
agents/prompts/: build.md  create_prd.md  feedback.md  final_gate.md  orchestrate.md  plan.md  promote.md  repo_init.md  retro.md
agents/prompts/refs/: feedback_rules.md  questions_rules.md
agents/repos/_template/: config.yaml  knowledge.md
agents/sandbox/: .env.example  Dockerfile  entrypoint.sh  setup.sh
agents/skills/: api_development.md  ci_cd.md  docker.md  documentation.md  refactoring.md  testing.md
keywork/config/: defaults.yaml
keywork/docs/: README.md
keywork/prompts/: system.md
keywork/scripts/: run.sh
keywork/skills/: README.md
keywork/tui/: __main__.py  app.py  sandbox.py  screens.py  state.py  terminal.py
projects/_template/: prd.yaml  progress.md
projects/_template/logs/: README.md
repos/_template/: config.yaml
repos/_template/learnings/: README.md
repos/_template/workspace/: .gitkeep
tests/: conftest.py
tests/test_tui/: test_state.py
