[project]
name = "keywork"
version = "0.1.0"
description = "Autonomous coding platform — the connective tissue between intent and implementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=3.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
keywork = "keywork.tui.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
